--- a/.gitignore
+++ b/.gitignore
@@ -32,9 +32,5 @@ dist/
 # Custom ignored folders
 Data/
 GBFS-SND/
-Visualize/
-Visualize New/
-Result/
-Result Original/
-Result New/
+Evaluation/
 Original Result/
