--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,6 @@ Original Result/
 Compare/Results/
 Compare/Results Debug/
 Compare/Results temp/
+
+"OOP Code"/myinputdatasetXD.py
+"Python Code"/myinputdatasetXD.py
