--- a/.gitignore
+++ b/.gitignore
@@ -39,8 +39,10 @@ Compare/Results Debug/
 Compare/Results Debug 2/
 Compare/Results temp/
 _local_out/
+Compare/analyze_compare_acc.py
 Compare/analyze_compare_results_v2.py
 Compare/analyze_compare_results_v3.py
+Compare/analyze_compare_results_v4.py
 Compare/freidman_test.py
 Compare/gbfs_compare_results/
 Compare/get_size_enhance.py
